<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        android:paddingHorizontal="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:autofillHints="name"
            android:hint="@string/name_details"
            android:inputType="text"
            android:textColorHint="#757575"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lllast_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llname"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        android:paddingHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <EditText
            android:id="@+id/ed_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:hint="@string/last_name_details"
            android:inputType="text"
            android:textColorHint="#757575"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:autofillHints=""
            />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lllast_name"
        >
        <RadioButton android:id="@+id/rbman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Man"
            />
        <RadioButton android:id="@+id/rbwoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Woman"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"

        />

</androidx.constraintlayout.widget.ConstraintLayout>