<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue_second">

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:hint="@string/name"
    />

    <EditText
        android:id="@+id/ed_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name"
        android:hint="@string/last_name"
        />


       <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="@id/rg_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_last_name"
            android:layout_marginRight="100dp"
            android:backgroundTint="@color/orange_generic"
            app:cornerRadius="20dp"
           />


    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_agregar"
        app:layout_constraintTop_toBottomOf="@id/ed_last_name"
        android:layout_marginLeft="100dp"
        >
        <RadioButton android:id="@+id/radio_hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Man"
            />
        <RadioButton android:id="@+id/radio_mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Woman"
            />
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rg_gender"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_item"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="30dp"
            />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>